# optical-music-recognition

./: .gitignore  Cargo.toml  README.md
example/: CMakeLists.txt  af_orb_test.cpp  demuxing_decoding.c
src/: Camera.rs  FfmpegCamera.rs  ffmpeg_camera.rs  ffmpeg_utils.rs  image_ycbcr.rs  lib.rs  main.rs
src/detection/: mod.rs
src/detection/ransac/: staff_cross.rs
src/detection/refinement/: mod.rs
src/detection/scanning/: mod.rs  staff_cross.rs
src/drawing/: context.rs  glsl_functions.rs  image_pane.rs  mod.rs  rectangle_buffer.rs  text_helper.rs
src/drawing/glsl/: draw_homog_main.fs
src/ffmpeg_camera/: af_image.rs  ffmpeg_camera.rs  ffmpeg_camera_extra.rs  ffmpeg_utils.rs  image.rs  image_nv12.rs  image_uyvy.rs  image_ycbcr.rs  mod.rs  to_texture.rs
src/geometry/: mod.rs  rotated_rectangle.rs  staff.rs
src/math/: mod.rs
src/omr/: mod.rs  scanning.rs
src/omr/ransac/: mod.rs  staff_cross.rs
src/omr/refinement/: mod.rs
src/omr/scanning/: segment.rs  staff_cross.rs
src/utility/: af_util.rs  mod.rs
web/: Curves.elm  MatrixTest.elm  Ransac.elm  SplineViewer.elm  elm-package.json
web/LinearAlgebra/: Angle.elm  Matrix.elm  Matrix2.elm  TransformSE2.elm
web/LinearAlgebra/Matrix/: Unsafe.elm
