[package]
name = "optical-music-recognition"
version = "0.1.0"
authors = ["Mitchell Metcalfe <mitchell.s.metcalfe@gmail.com>"]

[dependencies]
libc = "0.2"
glium = "*"
nalgebra = "0.5.1"
rand = "0.3.14"

GSL = "0.4"

# piston2d-graphics = "*"
# piston2d-glium_graphics = "*"
# piston = "*"
# piston_window = "*"
# pistoncore-glutin_window = "*"
# image = "*"

# ffmpeg-sys = "2.8.6-1" # Problems due to bad config detection.
[dependencies.ffmpeg-sys]
git = "file:/Users/mitchell/code/rust-ffmpeg-sys"
