[package]
name = "optical-music-recognition"
version = "0.1.0"
authors = ["Mitchell Metcalfe <mitchell.s.metcalfe@gmail.com>"]

[dependencies]
libc = "0.2"
# glium = "0.14.0"
glium = "0.13.5"
nalgebra = "0.5.1"
rand = "0.3.14"
time = "0.1"

glium_text = "0.8.0"

GSL = "0.4"

# piston2d-graphics = "*"
# piston2d-glium_graphics = "*"
# piston = "*"
# piston_window = "*"
# pistoncore-glutin_window = "*"
# image = "*"

# arrayfire = "3.2.0" # Problem accessing members of a Features struct
[dependencies.arrayfire]
git = "file:/Users/mitchell/code/arrayfire-rust"
branch = "devel"

# ffmpeg-sys = "2.8.6-1" # Problems due to bad config detection.
[dependencies.ffmpeg-sys]
git = "file:/Users/mitchell/code/rust-ffmpeg-sys"


[profile.release]
debug = true
