[package]
name = "optical-music-recognition"
version = "0.1.0"
authors = ["Mitchell Metcalfe <mitchell.s.metcalfe@gmail.com>"]

[dependencies]
# libc = "0.2.10"
# glium = "0.14.0"
# nalgebra = "0.8.1"
# rand = "0.3.14"
# time = "0.1"
# glium_text = "0.8.0"
# GSL = "0.4.26"

libc = "0.2"
# glium = "0.14" # glium_text has not yet been updated on crates.io
glium = "0.13.5"
glium_text = "0.8"
nalgebra = "0.8"
rand = "0.3.14"
time = "0.1"
GSL = "0.4"

# nalgebra = "0.5.1"
# glium = "0.13.5"

# arrayfire = "3.2.0" # Problem accessing members of a Features struct
[dependencies.arrayfire]
git = "file:/Users/mitchell/code/arrayfire-rust"
branch = "devel"

# ffmpeg-sys = "2.8.6-1" # Problems due to bad config detection.
[dependencies.ffmpeg-sys]
git = "file:/Users/mitchell/code/rust-ffmpeg-sys"


[profile.release]
debug = true
